tests/ui/link-native-libs/manual-link-bad-search-path.rs
//@ compile-flags:-L native=

fn main() {
}

//~? ERROR empty search path given via `-L`
